[tool.poetry]
name = "preymaker-sample-picanso"
version = "0.1.0"
description = "A script to blend PNG images from a zip file and handle subway alerts."
authors = ["Rebecca Picanso <rebeccapicansot@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.1.0"
numpy = "^2.2.2"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"